--- a/win.html
+++ b/win.html
@@ -160,7 +160,7 @@
         <div id="hur">
             <h1>HURRAY!!</h1>
             <p>YOU WON THE GAME</p>
-            <button><a href="index.html" style="text-decoration: none;">PLAY AGAIN</a></button>
+            <button><a href="index.html" style="text-decoration: none; color:#6B6B6B ;">PLAY AGAIN</a></button>
         </div>
     </div>
     <div id="rules" style="display: none;">
